Moved reference icon to right and added @yellow-dark

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -71,6 +71,7 @@
 @aqua-light:          		lighten(@aqua, 15%);
 @yellow:           			#FFBF47;
 @yellow-light:     			lighten(@yellow, 25%); // #FFEBC6
+@yellow-dark:				darken(@yellow, 30%);
 @purple:					#947ACA;
 @purple-dark:				darken(@purple, 25%);
 @gray-background: 			#47565b; // Blue-gray colour
