--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -28,26 +28,30 @@
 }
 
 .ref-heading__toggle--on {
-	color: @yellow; 
 	background: none; 
 	padding-right: 0;
 	a {
-		color: @yellow;
+		color: @yellow-dark;
 	} 
-    &:before {
+    &:after {
         content: "\f005";
         color: @yellow;
         &:extend(.a-social-top-);
         bottom: -0.05em;
+        margin: 0 0 0 .25em;
     }
 }
 
 .ref-heading__toggle--off {
-    &:before {
+	a {
+		color: @blue;
+	}
+    &:after {
         content: "\f005";
         color: @blue-light;
         &:extend(.a-social-top-);
         bottom: -0.05em;
+        margin: 0 0 0 .25em;
     }
 }
 
