--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5657,8 +5657,8 @@ input.custom-dropdown__button {
 .a-social-print:before,
 .a-social-references:before,
 .a-social-email:before,
-.ref-heading__toggle--on:after,
-.ref-heading__toggle--off:after {
+.ref-heading__toggle--on a:after,
+.ref-heading__toggle--off a:after {
   font-family: FontAwesome, icomoon;
   line-height: 2.5rem;
   display: inline-block;
@@ -11685,7 +11685,7 @@ html[lang="en-SCT"] .side-nav > h2 {
 .ref-heading__toggle--on a {
   color: #ad7100;
 }
-.ref-heading__toggle--on:after {
+.ref-heading__toggle--on a:after {
   content: "\f005";
   color: #ffbf47;
   bottom: -0.05em;
@@ -11694,7 +11694,7 @@ html[lang="en-SCT"] .side-nav > h2 {
 .ref-heading__toggle--off a {
   color: #003c64;
 }
-.ref-heading__toggle--off:after {
+.ref-heading__toggle--off a:after {
   content: "\f005";
   color: #a5bddc;
   bottom: -0.05em;
