Further mega-menu fixes.

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -7791,6 +7791,9 @@ html[lang="en-SCT"] .main-nav {
     display: none!important;
   }
 }
+.active > .mega-menu {
+  display: table;
+}
 /**
  * PAGE INFO
  *
