--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -117,6 +117,13 @@ h4 > .ref-heading__toggle {
 	margin: -.9em 0 0 0; 
 	font-size: @font-size-small;
 	padding: .1em .2em;
+	background: none;
+	color: @red;
+	&:hover,
+	&:focus,
+	&:active {
+		background: none;
+	}
 }
 .ref-dialog__list-item--removed {
     text-decoration: line-through;
