New styling for new modals (overlay)

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -48,6 +48,11 @@ input[type=button] {
     }
 }
 
+.btn-right {
+    float: right;
+    margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;    
+}
+
 .btn-disabled,
 .button--grey {
     color: @gray-3;
