--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3571,7 +3571,8 @@ h2 {
   line-height: 1.3;
   margin: 1em 0 0.5em;
 }
-h3 {
+h3,
+.overlay__header {
   font-size: 1.6em;
   margin: 1em 0 0.625em;
 }
@@ -3954,6 +3955,10 @@ input[type=button]:active {
 .btn-secondary:active,
 .btn-secondary:focus {
   background-color: #003d6f;
+}
+.btn-right {
+  float: right;
+  margin: 0.5rem 0 0.5rem 0.5rem;
 }
 .btn-disabled,
 .button--grey {
@@ -4390,23 +4395,24 @@ input[type="file"]::before {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\F0D7";
-  color: white;
+  color: #000000;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #000000;
   border-radius: 50%;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  border: none;
+  line-height: 2em;
+  width: 1em;
 }
 .dropdown:after {
-  color: #000000;
   pointer-events: none;
-  border: none;
 }
 .dropdown select {
   background: none;
@@ -5401,12 +5407,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f00c";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5423,12 +5429,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f054";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5445,12 +5451,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f053";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5467,12 +5473,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f078";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5489,12 +5495,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f077";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5511,12 +5517,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\0021";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5533,12 +5539,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f003";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5555,12 +5561,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f02f";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5577,12 +5583,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f01e";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -5599,12 +5605,12 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f019";
-  color: white;
+  color: #ffffff;
   line-height: 1.9em;
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -6201,7 +6207,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.overlay__header {
   line-height: 1.3;
   color: #004b88;
   font-weight: 700;
@@ -6219,7 +6226,8 @@ h2 {
   font-size: 1.8rem;
 }
 h3,
-legend {
+legend,
+.overlay__header {
   font-size: 1.3rem;
   font-weight: 600;
 }
@@ -6691,7 +6699,7 @@ hr {
 /**
  * BUTTON ICON MIXIN
  *
- * Mixin to add icons to buttons by picking the content and position.
+ * Mixin to add icons to buttons by picking the content, position, color and border.
  */
 /* Module files */
 /**
@@ -12778,5 +12786,80 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
   color: #ffffff;
   text-decoration: none;
   opacity: 1;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.overlay__modal {
+  /* The position, display and transform are used for feature tests in the script.  Things might break if these are changed */
+  position: fixed;
+  /* See https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/ */
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ie-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  /* Max width prevents the dialog being wider than the screen */
+  width: 60em;
+  max-width: 60%;
+  /* Max height prevents the dialog being taller than the screen */
+  max-height: 80%;
+  background: #ffffff;
+  /* We will limit ourselves to the new syntax and the IE tweener syntax */
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+@media (max-width: 599px) {
+  .overlay__modal {
+    max-width: 95%;
+    max-height: 95%;
+  }
+}
+.overlay__header {
+  border-bottom: 1px solid #eeeeee;
+  padding: 0.75rem 0.5rem;
+  margin: 0 0.5rem;
+  position: relative;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+.overlay__main {
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  padding: 0.75rem 1rem;
+}
+.overlay__main > :first-child {
+  margin-top: 0;
+}
+.overlay__main > :last-child {
+  margin-bottom: 0;
+}
+.overlay__footer {
+  border-top: 1px solid #eeeeee;
+  padding: 0.75rem 0.5rem;
+  margin: 0 0.5rem;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  text-align: right;
+}
+.overlay__footer .btn {
+  margin: 0.5rem 0 0.5rem 0.5rem;
 }
 /*# sourceMappingURL=site.css.map */
