Added pages for oberlay and reference list. Updated styling and code to match beta styling. Created new .callout--icon mixin, inside mixins/callout.less. Added icons to green and red callouts.

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -51,6 +51,7 @@
 @red:              			#DF3034;
 @red-light:            		lighten(@red, 12%);
 @red-lighter:          		lighten(@red, 28%); 	// #FAE1E1
+@red-lightest:         		lighten(@red, 40%);
 @pink: 						#F499BE; //#FBC0AD
 @orange:           			#F47738;
 @orange-light:         		lighten(@orange, 15%);
