--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -102,6 +102,18 @@
 .save-button-icon {
     .btn-icon("\f019");
 }
+.retrieve-button-icon {
+    .btn-icon("\f093");
+}
+.copy-button-icon {
+    .btn-icon("\f0c5");
+}
+.clear-button-icon {
+    .btn-icon("\f014");
+}
+.help-button-icon {
+    .btn-icon("\f128");
+}
 // Social
 .a-social- {
     .icon-fa;
