--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -22,7 +22,8 @@
 			@green-light, 
 			@green 
 		); 
-		.callout--border--left; 
+		.callout--border--left;
+        .callout--icon("\f058",@green);
 	}
 
 	// Red
@@ -32,6 +33,7 @@
 			@red 
 		); 
 		.callout--border--left;
+        .callout--icon("\f06a",@red);
 	}
 
 	// Yellow
