--- a/public/css/chat-styles.css
+++ b/public/css/chat-styles.css
@@ -103,7 +103,7 @@ h4,
 h5,
 h6 {
   line-height: 1.3;
-  color: #004b88;
+  color: #004B88;
   font-weight: 700;
   margin-top: 1em;
   margin-bottom: 0.6em;
@@ -168,7 +168,7 @@ a:focus {
   text-decoration: none;
 }
 a:active {
-  color: #004b88;
+  color: #004B88;
 }
 a:visited {
   color: #253460;
@@ -219,34 +219,34 @@ hr {
   text-decoration: underline;
 }
 .badge {
-  background: #ffbf47;
+  background: #FFBF47;
   font-weight: 700;
   padding: .3em .5em;
 }
 .statusmessage {
   font-weight: 600;
-  color: #df3034;
+  color: #DF3034;
 }
 .fieldtitles {
-  color: #000000;
+  color: #000;
 }
 .surveyquestions {
   font-weight: 600;
-  color: #000000;
+  color: #000;
 }
 .surveytitle {
-  color: #000000;
+  color: #000;
   font-size: 1.3rem;
 }
 .bannermessage {
-  color: #004b88;
+  color: #004B88;
 }
 .bannermessage b {
   font-size: 1.3rem;
-  color: #004b88;
+  color: #004B88;
 }
 .noservicemessage {
-  color: #004b88;
+  color: #004B88;
 }
 #SelectedSessionConversation {
   border-color: #dfdfdf !important;
@@ -267,7 +267,7 @@ textarea {
 }
 /* web chat engage */
 body {
-  background: #ffffff;
+  background: #FFF;
   font: 1rem "open_sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 10px 0 0 0 !important;
   padding: 0 !important;
@@ -295,7 +295,7 @@ body,
 .fieldtitles,
 #ConversationAlerts .statusmessage,
 #SurveyArea .bannermessage {
-  color: #000000 !important;
+  color: #000 !important;
 }
 textarea[name=requestinfo] {
   height: 137px !important;
@@ -361,7 +361,7 @@ textarea {
 /* Hyperlinks */
 /* Buttons */
 .submit-blue {
-  background: #004b88;
-  color: #ffffff;
+  background: #004B88;
+  color: #FFF;
 }
 /*# sourceMappingURL=chat-styles.css.map */
