Small bug fix to make sure callouts inside other callouts respect their heading colour styles.

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -18,7 +18,7 @@
     color: @callout-text;
     border: 0px @callout-border solid;
     display: block;
-	h1, h2, h3 {
+	> h1, > h2, > h3 {
 		color: @callout-headings; 
 		font-size: @font-size-h3;
 	}
