--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2369,9 +2369,9 @@ pre {
   padding: 0.75rem 1rem;
   border-left-width: 0.5rem;
 }
-pre h1,
-pre h2,
-pre h3 {
+pre > h1,
+pre > h2,
+pre > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -2432,9 +2432,9 @@ pre .callout__link:hover:after {
 pre .callout__link--anchor:after {
   content: "\f063";
 }
-pre h1,
-pre h2,
-pre h3 {
+pre > h1,
+pre > h2,
+pre > h3 {
   color: #003C64;
   font-size: 1.3rem;
 }
@@ -2507,9 +2507,9 @@ pre--confirmation {
   display: block;
   border-left-width: 0.5rem;
 }
-pre--confirmation h1,
-pre--confirmation h2,
-pre--confirmation h3 {
+pre--confirmation > h1,
+pre--confirmation > h2,
+pre--confirmation > h3 {
   color: #537D2D;
   font-size: 1.3rem;
 }
@@ -2598,9 +2598,9 @@ pre--warning {
   display: block;
   border-left-width: 0.5rem;
 }
-pre--warning h1,
-pre--warning h2,
-pre--warning h3 {
+pre--warning > h1,
+pre--warning > h2,
+pre--warning > h3 {
   color: #DF3034;
   font-size: 1.3rem;
 }
@@ -2689,9 +2689,9 @@ pre--alert {
   display: block;
   border-left-width: 0.5rem;
 }
-pre--alert h1,
-pre--alert h2,
-pre--alert h3 {
+pre--alert > h1,
+pre--alert > h2,
+pre--alert > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -2762,9 +2762,9 @@ pre--quote {
   border-width: 1px;
   border-left-width: 0.5rem;
 }
-pre--quote h1,
-pre--quote h2,
-pre--quote h3 {
+pre--quote > h1,
+pre--quote > h2,
+pre--quote > h3 {
   color: #606060;
   font-size: 1.3rem;
 }
@@ -2836,9 +2836,9 @@ pre--white {
   border: 0px #bfbfbf solid;
   display: block;
 }
-pre--white h1,
-pre--white h2,
-pre--white h3 {
+pre--white > h1,
+pre--white > h2,
+pre--white > h3 {
   color: #FFF;
   font-size: 1.3rem;
 }
@@ -2907,9 +2907,9 @@ pre--heritage {
   border: 0px #e17f04 solid;
   display: block;
 }
-pre--heritage h1,
-pre--heritage h2,
-pre--heritage h3 {
+pre--heritage > h1,
+pre--heritage > h2,
+pre--heritage > h3 {
   color: #004B88;
   font-size: 1.3rem;
 }
@@ -2978,9 +2978,9 @@ pre--responsible {
   border: 0px #449a55 solid;
   display: block;
 }
-pre--responsible h1,
-pre--responsible h2,
-pre--responsible h3 {
+pre--responsible > h1,
+pre--responsible > h2,
+pre--responsible > h3 {
   color: #57486B;
   font-size: 1.3rem;
 }
@@ -3049,9 +3049,9 @@ pre--inventive {
   border: 0px #f56333 solid;
   display: block;
 }
-pre--inventive h1,
-pre--inventive h2,
-pre--inventive h3 {
+pre--inventive > h1,
+pre--inventive > h2,
+pre--inventive > h3 {
   color: #006278;
   font-size: 1.3rem;
 }
@@ -3120,9 +3120,9 @@ pre--generous {
   border: 0px #665aad solid;
   display: block;
 }
-pre--generous h1,
-pre--generous h2,
-pre--generous h3 {
+pre--generous > h1,
+pre--generous > h2,
+pre--generous > h3 {
   color: #00553F;
   font-size: 1.3rem;
 }
@@ -3192,9 +3192,9 @@ pre--related {
   display: block;
   border-top-width: 0.5rem;
 }
-pre--related h1,
-pre--related h2,
-pre--related h3 {
+pre--related > h1,
+pre--related > h2,
+pre--related > h3 {
   color: #006278;
   font-size: 1.3rem;
 }
@@ -8087,9 +8087,9 @@ html[lang="en-SCT"] .main-nav {
   border-width: 1px;
   border-left-width: 0.5rem;
 }
-.callout h1,
-.callout h2,
-.callout h3 {
+.callout > h1,
+.callout > h2,
+.callout > h3 {
   color: #003C64;
   font-size: 1.3rem;
 }
@@ -8162,9 +8162,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.callout--confirmation h1,
-.callout--confirmation h2,
-.callout--confirmation h3 {
+.callout--confirmation > h1,
+.callout--confirmation > h2,
+.callout--confirmation > h3 {
   color: #537D2D;
   font-size: 1.3rem;
 }
@@ -8253,9 +8253,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.callout--warning h1,
-.callout--warning h2,
-.callout--warning h3 {
+.callout--warning > h1,
+.callout--warning > h2,
+.callout--warning > h3 {
   color: #DF3034;
   font-size: 1.3rem;
 }
@@ -8344,9 +8344,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.callout--alert h1,
-.callout--alert h2,
-.callout--alert h3 {
+.callout--alert > h1,
+.callout--alert > h2,
+.callout--alert > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -8417,9 +8417,9 @@ html[lang="en-SCT"] .main-nav {
   border-width: 1px;
   border-left-width: 0.5rem;
 }
-.callout--quote h1,
-.callout--quote h2,
-.callout--quote h3 {
+.callout--quote > h1,
+.callout--quote > h2,
+.callout--quote > h3 {
   color: #606060;
   font-size: 1.3rem;
 }
@@ -8491,9 +8491,9 @@ html[lang="en-SCT"] .main-nav {
   border: 0px #bfbfbf solid;
   display: block;
 }
-.callout--white h1,
-.callout--white h2,
-.callout--white h3 {
+.callout--white > h1,
+.callout--white > h2,
+.callout--white > h3 {
   color: #FFF;
   font-size: 1.3rem;
 }
@@ -8562,9 +8562,9 @@ html[lang="en-SCT"] .main-nav {
   border: 0px #e17f04 solid;
   display: block;
 }
-.callout--heritage h1,
-.callout--heritage h2,
-.callout--heritage h3 {
+.callout--heritage > h1,
+.callout--heritage > h2,
+.callout--heritage > h3 {
   color: #004B88;
   font-size: 1.3rem;
 }
@@ -8633,9 +8633,9 @@ html[lang="en-SCT"] .main-nav {
   border: 0px #449a55 solid;
   display: block;
 }
-.callout--responsible h1,
-.callout--responsible h2,
-.callout--responsible h3 {
+.callout--responsible > h1,
+.callout--responsible > h2,
+.callout--responsible > h3 {
   color: #57486B;
   font-size: 1.3rem;
 }
@@ -8704,9 +8704,9 @@ html[lang="en-SCT"] .main-nav {
   border: 0px #f56333 solid;
   display: block;
 }
-.callout--inventive h1,
-.callout--inventive h2,
-.callout--inventive h3 {
+.callout--inventive > h1,
+.callout--inventive > h2,
+.callout--inventive > h3 {
   color: #006278;
   font-size: 1.3rem;
 }
@@ -8775,9 +8775,9 @@ html[lang="en-SCT"] .main-nav {
   border: 0px #665aad solid;
   display: block;
 }
-.callout--generous h1,
-.callout--generous h2,
-.callout--generous h3 {
+.callout--generous > h1,
+.callout--generous > h2,
+.callout--generous > h3 {
   color: #00553F;
   font-size: 1.3rem;
 }
@@ -8847,9 +8847,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-top-width: 0.5rem;
 }
-.callout--related h1,
-.callout--related h2,
-.callout--related h3 {
+.callout--related > h1,
+.callout--related > h2,
+.callout--related > h3 {
   color: #006278;
   font-size: 1.3rem;
 }
@@ -8919,9 +8919,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.box--warning h1,
-.box--warning h2,
-.box--warning h3 {
+.box--warning > h1,
+.box--warning > h2,
+.box--warning > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -8996,9 +8996,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.highlight h1,
-.highlight h2,
-.highlight h3 {
+.highlight > h1,
+.highlight > h2,
+.highlight > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -9068,9 +9068,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.highlight--warning h1,
-.highlight--warning h2,
-.highlight--warning h3 {
+.highlight--warning > h1,
+.highlight--warning > h2,
+.highlight--warning > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -9140,9 +9140,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.highlight--error h1,
-.highlight--error h2,
-.highlight--error h3 {
+.highlight--error > h1,
+.highlight--error > h2,
+.highlight--error > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -9251,9 +9251,9 @@ html[lang="en-SCT"] .main-nav {
   border-width: 1px;
   border-left-width: 0.5rem;
 }
-.dap-panel .dap-panel--base h1,
-.dap-panel .dap-panel--base h2,
-.dap-panel .dap-panel--base h3 {
+.dap-panel .dap-panel--base > h1,
+.dap-panel .dap-panel--base > h2,
+.dap-panel .dap-panel--base > h3 {
   color: #A5BDDC;
   font-size: 1.3rem;
 }
@@ -9326,9 +9326,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.dap-panel--crucial h1,
-.dap-panel--crucial h2,
-.dap-panel--crucial h3 {
+.dap-panel--crucial > h1,
+.dap-panel--crucial > h2,
+.dap-panel--crucial > h3 {
   color: #DF3034;
   font-size: 1.3rem;
 }
@@ -9398,9 +9398,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.dap-panel--important h1,
-.dap-panel--important h2,
-.dap-panel--important h3 {
+.dap-panel--important > h1,
+.dap-panel--important > h2,
+.dap-panel--important > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -9470,9 +9470,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-top-width: 0.5rem;
 }
-.dap-panel--progress h1,
-.dap-panel--progress h2,
-.dap-panel--progress h3 {
+.dap-panel--progress > h1,
+.dap-panel--progress > h2,
+.dap-panel--progress > h3 {
   color: #006278;
   font-size: 1.3rem;
 }
@@ -9542,9 +9542,9 @@ html[lang="en-SCT"] .main-nav {
   display: block;
   border-left-width: 0.5rem;
 }
-.dap-panel--adviser h1,
-.dap-panel--adviser h2,
-.dap-panel--adviser h3 {
+.dap-panel--adviser > h1,
+.dap-panel--adviser > h2,
+.dap-panel--adviser > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -9615,9 +9615,9 @@ html[lang="en-SCT"] .main-nav {
   border-width: 1px;
   border-left-width: 0.5rem;
 }
-.dap-panel--example h1,
-.dap-panel--example h2,
-.dap-panel--example h3 {
+.dap-panel--example > h1,
+.dap-panel--example > h2,
+.dap-panel--example > h3 {
   color: #606060;
   font-size: 1.3rem;
 }
@@ -10398,9 +10398,9 @@ input.tablesort-filter {
   border-width: 1px;
   margin-top: 2rem;
 }
-.steps h1,
-.steps h2,
-.steps h3 {
+.steps > h1,
+.steps > h2,
+.steps > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
@@ -10506,9 +10506,9 @@ input.tablesort-filter {
   display: block;
   border-width: 1px;
 }
-.steps--navigation h1,
-.steps--navigation h2,
-.steps--navigation h3 {
+.steps--navigation > h1,
+.steps--navigation > h2,
+.steps--navigation > h3 {
   color: #f2f8ff;
   font-size: 1.3rem;
 }
@@ -12351,9 +12351,9 @@ li.ref-dialog__list-item--highlight {
   display: block;
   border-left-width: 0.5rem;
 }
-.search__spellcheck h1,
-.search__spellcheck h2,
-.search__spellcheck h3 {
+.search__spellcheck > h1,
+.search__spellcheck > h2,
+.search__spellcheck > h3 {
   color: #191926;
   font-size: 1.3rem;
 }
